--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,6 @@ jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 kubernetes==29.0.0
 langchain==0.1.17
-langchain-chroma==0.1.0
 langchain-community==0.0.36
 langchain-core==0.1.50
 langchain-openai==0.1.6
@@ -138,3 +137,4 @@ websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.18.1
+faiss-cpu
